--- a/Views/Home/Registro.cshtml
+++ b/Views/Home/Registro.cshtml
@@ -114,7 +114,7 @@
                                 </div>
                                 <div class="col-md-2" style="text-align:left"><label style="color:whitesmoke">Fecha Final</label></div>
                                 <div class="col-md-4">
-                                    @Html.EditorFor(model => model.Fec_Fin, new { @Value = @DateTime.Now.ToString("yyyy-MM-dd"), htmlAttributes = new { @class = "form-control", @placeholder = "Fecha de término", @id = "FechaFin" } })
+                                    @Html.EditorFor(model => model.Fec_Fin, new { @Value = @DateTime.Now.ToString("yyyy-MM-dd"), htmlAttributes = new { @class = "form-control", @placeholder = "Fecha de término", @type="date", @id = "FechaFin", } })
                                     @Html.ValidationMessageFor(model => model.Fec_Fin, "", new { @class = "text-danger" })
                                 </div>
 
@@ -397,7 +397,7 @@
                         </div>
   <div class="row">
                                                                   
-                                      <div class=col-sm-12 pl-3"><a href="http://sysstrategia.azurewebsites.net/">http://sysstrategia.azurewebsites.net/</a></div> 
+                                      <div class=col-sm-12 pl-3"><a href="https://excellenceapp.azurewebsites.net/">https://excellenceapp.azurewebsites.net/</a></div>
                                        </div>
 `
 
