--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -41,26 +41,38 @@
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
-                
+
                 <li class="nav-item">
                     <a class="nav-link" href="@Url.Action("Index", "Home")">
 
                         Material de Capacitación
                     </a>
                 </li>
+                @{
+                    string Nivel4 = Convert.ToString(Session["Int_IdNivel"]);
+                    
 
-                <li class="nav-item">
-                    <a class="nav-link" href="@Url.Action("GridMvcEmpleados", "Home")">
-                             Usuarios
-                    </a>
-                </li>
-             
-                <li class="nav-item">
-                    <a class="nav-link" href="@Url.Action( "Registro", "Home")">
-                        Registro
-                    </a>
-                </li>
-             
+                    if (@Nivel4 == "1")
+                    {
+                        <li class="nav-item">
+                            <a class="nav-link" href="@Url.Action("GridMvcEmpleados", "Home")">
+                                Usuarios
+                            </a>
+                        </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link" href="@Url.Action( "Registro", "Home")">
+                                Registro
+                            </a>
+                        </li>
+                    }
+
+
+                }
+
+
+
+
             </ul>
             <form class="form-inline my-2 my-lg-0">
                 <a class="nav-link" href="@Url.Action("Logout", "Home")">
